--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - icons/
+    - images/
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
