--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   cached_network_image: ^2.3.3
   scan: ^0.0.3
   decimal: ^0.3.5
+  splash_screen_view: ^1.0.1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
